2004-12-01  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/bm.c, main/piggy.c: fix cfile bugs from recent changes

	* D2X.make: fix build on Carbon by adding digiobj.c

	* main/mission.c: set builtin_hogsize for non-built-in missions

2004-12-02  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, include/physfsx.h: fix RELEASE build, make sure
	path separator gets added to hogdir

2004-12-01  Bradley Bell  <btb@icculus.org>

	* README, configure.ac, VisualC/d2x/d2x.dsp,
	VisualC/d2xgl/d2xgl.dsp, VisualC/libmve/libmve.dsp,
	VisualC/mveplayer/mveplayer.dsp, include/loadgl.h,
	include/ogl_init.h, include/physfsx.h: Updated MSVC build, now
	uses dynamic opengl loading

2004-12-01  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/ogl/gr.c: make write_bmp use PhysicsFS

	* include/args.h, misc/args.c: new AppendArgs function. This
	separates the copying of the arguments passed to main() from the
	reading of the arguments file

	* include/cfile.h: Use portable PHYSFSX_getRealPath function, Use
	the flexible cfgets, Fix compiling issues in MPW.

	* include/physfsx.h: PHYSFSX_readU8 isn't endian friendly when
	reading into an int, so it's removed completely.  PHYSFSX_getc was
	removed, because it's only use in misc/strio.c was removed.  Put
	in PHYSFSX_getRealPath, which recognises platform-specific
	separators and doesn't use snprintf (MPW doesn't have it).  MPW
	doesn't have statfs.

	* main/inferno.c: Remove use of open_movie_file.  Read the
	arguments file from the base directory, if there is one.  Set up
	D2X's write directory, including replacing any tilde at the start
	of the path (if there is one) with the string returned by
	PHYSFS_getUserDir(). This applies to all platforms. On Unix the
	default is still ~/.d2x.  Check if the write directory has to be
	created.  Read the arguments file in this write directory if there
	is one.  If there's still no write directory, set it to the base
	directory. Won't set it to the current directory if this fails,